--- a/app/index.html
+++ b/app/index.html
@@ -29,6 +29,9 @@
                     <p class="text-promo">promo code:</p>
                     <p class="promo-code">ask2024</p>
                     <button class="icons-btn" id="coppy__bufer-btn"></button>
+                    <div class="icon-popup" id="iconPopup">
+                        <img src="img/icons/copy.svg" alt="Copy Icon">
+                    </div>
                     <div class="btn_img_snow">
                         <a href="https://sloterra.com/registration"><img class="btn_img" src="img/button/button.png" alt=""></a>
                     </div>
